updated many things

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,5 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap');
 
-$font-stack: "Exo", sans-serif;
-$font-green: #2A9D8F;
-$background-color: #F1F7F9;
+$font-stack: "Raleway", sans-serif;
+$background-color: #2A9D8F;
+
+html {
+    height: 100%;
+}
+  
+body {
+    color: #FFFFFF;
+    background-image: linear-gradient(to right, $background-color, lighten($background-color, 40%));
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    overflow-y: hidden;
+    font-family: $font-stack;
+}
+
+#root {
+    width: 50%;
+    margin: auto;
+    height: 100%;
+}
